--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "private": true,
+  "name": "",
   "type": "module",
-  "license": "(CC-BY-NC-4.0 OR Apache-2.0)",
-  "author": "Brian Holt <btholt+next-course-starter@gmail.com>",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && npm run csv",
-    "start": "next start",
-    "csv": "node csv/index.js",
-    "seo": "node summary/index.js"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "gray-matter": "^4.0.3",
-    "highlight.js": "^11.10.0",
-    "marked": "^14.1.0",
-    "marked-highlight": "^2.1.4",
-    "next": "^14.2.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "title-case": "^4.3.1"
+    "@astrojs/check": "^0.9.4",
+    "@fortawesome/fontawesome-free": "^6.7.0",
+    "astro": "^4.16.13",
+    "title-case": "^4.3.2",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "convert-array-to-csv": "^2.0.0",
-    "dotenv": "^16.4.5",
-    "openai": "^4.68.2",
-    "zod": "^3.23.8"
+    "@types/node": "^22.9.0"
   }
 }
